[package]
name = "linkdoku-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
yew-hooks = "0.1.56"
linkdoku-common = { path = "../common" }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4"
gloo = "0.8"
serde = { version = "1", features = ["derive"] }
md5 = "0.7"
url = "2.2"
thiserror = "1.0"
lz-str = "0.1"
web-sys = { version = "0.3", features = [
    "HtmlLinkElement",
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlButtonElement",
    "HtmlOptionElement",
] }
serde_json = "1"
base64 = "0.13"
yew-toastrack = { path = "../yew-toastrack" }
wasm-bindgen = "0.2.82"
js-sys = "0.3.60"
stylist = { version = "0.10", features = ["yew_integration"] }
yew-markdown = { path = "../yew-markdown" }
