[package]
name = "yew-markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo = "0.8"
stylist = { version = "0.10", features = ["yew_integration"] }
pulldown-cmark = "0.9.2"
yew-bulma-tabs = { path = "../yew-bulma-tabs" }
yew-hooks = "0.1.56"
web-sys = "0.3.60"
