[package]
name = "yew-toastrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-agent = "0.1"
gloo = "0.8"
stylist = { version = "0.10", features = ["yew_integration"] }
serde = { version = "1", features = ["derive"] }
